--- a/index.html
+++ b/index.html
@@ -9,22 +9,55 @@
   <meta name="author" content="Yoon" />
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
   <!-- OG(Open Graph Data) -->
-   <meta property="og:title" content="윤의 포트폴리오" />
-   <meta property="og:type" content="website" />
-   <meta property="og:url" content="배포후 생성된 URL" />
-   <meta property="og:image" content="배포후에 생성된 이미지 URL" />
-    <!-- Google Fonts -->
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <!-- Font awesome -->
-    <script src="https://kit.fontawesome.com/b3fb6f48b6.js" crossorigin="anonymous"></script>
-    <!-- CSS -->
-     <link rel="stylesheet" href="css/style.css">
-     <!-- Javascript -->
-      <script src="src/main.js"></script>
-  </head>
+  <meta property="og:title" content="윤의 포트폴리오" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="배포후 생성된 URL" />
+  <meta property="og:image" content="배포후에 생성된 이미지 URL" />
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+  <!-- Font awesome -->
+  <script src="https://kit.fontawesome.com/b3fb6f48b6.js" crossorigin="anonymous"></script>
+  <!-- CSS -->
+  <link rel="stylesheet" href="css/style.css">
+  <!-- Javascript -->
+  <script src="src/main.js"></script>
+</head>
 <body>
-
+  <!-- Header -->
+  <header>
+    <div>
+      <img src="images/favicon.ico" alt="logo">
+      <h1><a href="#">YOON</a></h1>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#work">My Work</a></li>
+        <li><a href="#testimonial">Testimonials</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <!-- Main -->
+  <main>
+    <!-- Home -->
+    <section id="home"></section>
+    <!-- About -->
+    <section id="about"></section>
+    <!-- Skills -->
+    <section id="skills"></section>
+    <!-- Work -->
+    <section id="work"></section>
+    <!-- Testimonials -->
+    <section id="testimonial"></section>
+    <!-- Arrow up -->
+     <aside></aside>
+  </main>
+  <!-- Footer -->
+  <footer id="contact"></footer>
 </body>
 </html>
