--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
   <!-- Main -->
   <main>
     <!-- Home -->
-    <section id="home"></section>
+    <section id="home">
+      <img src="images/profile.png" alt="YOON's portfolio">
+      <h2>hello I&#39;m Dream Coder, Yoon</h2>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem, laboriosam!</p>
+      <a href="#contact">Contact Me</a>
+    </section>
     <!-- About -->
     <section id="about"></section>
     <!-- Skills -->
