--- a/index.html
+++ b/index.html
@@ -52,7 +52,29 @@
       <a href="#contact">Contact Me</a>
     </section>
     <!-- About -->
-    <section id="about"></section>
+    <section id="about">
+      <h2>About</h2>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi officiis consectetur dolorem numquam assumenda voluptatibus atque molestiae quis quae eius?
+      </p>
+      <ul>
+        <li>
+          <i class="fa-brands fa-html5"></i>
+          <p>Front-end</p>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto, facere.</p>
+        </li>
+        <li>
+          <i class="fa-solid fa-mobile"></i>
+          <p>Mobile</p>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto, facere.</p>
+        </li>
+        <li>
+          <i class="fa-solid fa-server"></i>
+          <p>Back-end</p>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto, facere.</p>
+        </li>
+      </ul>
+    </section>
     <!-- Skills -->
     <section id="skills"></section>
     <!-- Work -->
