--- a/index.html
+++ b/index.html
@@ -196,7 +196,39 @@
       </ul>
     </section>
     <!-- Testimonials -->
-    <section id="testimonial"></section>
+    <section id="testimonial">
+      <h2>Testimonial</h2>
+      <p>See what they say about me</p>
+      <ul>
+        <li>
+          <img src="images/testimonials/people1.webp" alt="people1">
+          <div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium minima possimus pariatur deserunt magni culpa excepturi at vel cumque similique!
+            </p>
+            <p><a href="#">James Kim</a> /Google</p>
+          </div>
+        </li>
+        <li>
+          <img src="images/testimonials/people2.webp" alt="people2">
+          <div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium minima possimus pariatur deserunt magni culpa excepturi at vel cumque similique!
+            </p>
+            <p><a href="#">Anna Jin</a> /Samsung</p>
+          </div>
+        </li>
+        <li>
+          <img src="images/testimonials/people3.webp" alt="people3">
+          <div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium minima possimus pariatur deserunt magni culpa excepturi at vel cumque similique!
+            </p>
+            <p><a href="#">Anna Jin</a> /Samsung</p>
+          </div>
+        </li>
+      </ul>
+    </section>
     <!-- Arrow up -->
      <aside></aside>
   </main>
