--- a/index.html
+++ b/index.html
@@ -230,9 +230,25 @@
       </ul>
     </section>
     <!-- Arrow up -->
-     <aside></aside>
+     <aside>
+      <a href="#home" title="back to top">
+        <i class="fa-solid fa-arrow-up"></i>
+      </a>
+     </aside>
   </main>
   <!-- Footer -->
-  <footer id="contact"></footer>
+  <footer id="contact">
+    <h2>Let&#39;s talk</h2>
+    <p>dream.coder.ellie@gmail.com</p>
+    <ul>
+      <li>
+        <a href="#" title="my github link" target="_blank"><i class="fa-brands fa-github"></i></a>
+      </li>
+      <li>
+        <a href="#" title="my linkedin link" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+      </li>
+    </ul>
+    <p>©Dream Coding Ellie - All rights reserved</p>
+  </footer>
 </body>
 </html>
