--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
   <!-- Footer -->
   <footer id="contact">
     <h2>Let&#39;s talk</h2>
-    <p>dream.coder.ellie@gmail.com</p>
+    <p>yunso7201@naver.com</p>
     <ul>
       <li>
         <a href="#" title="my github link" target="_blank"><i class="fa-brands fa-github"></i></a>
@@ -248,7 +248,7 @@
         <a href="#" title="my linkedin link" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
       </li>
     </ul>
-    <p>©Dream Coding Ellie - All rights reserved</p>
+    <p>©Publisher Yoon - All rights reserved</p>
   </footer>
 </body>
 </html>
