--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
   <main>
     <!-- Home -->
     <section id="home">
-      <img src="images/profile.png" alt="YOON's portfolio">
-      <h2>hello I&#39;m Dream Coder, Yoon</h2>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem, laboriosam!</p>
-      <a href="#contact">Contact Me</a>
+      <img class="home__avatar" src="images/profile.png" alt="YOON's portfolio">
+      <h2 class="home__title">hello <br /> I&#39;m <strong class="home__title--strong">Dream Coder</strong>, Yoon</h2>
+      <p class="home__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem, laboriosam!</p>
+      <a class="home__contact" href="#contact">Contact Me</a>
     </section>
     <!-- About -->
     <section id="about">
