--- a/index.html
+++ b/index.html
@@ -52,33 +52,33 @@
       <a class="home__contact" href="#contact">Contact Me</a>
     </section>
     <!-- About -->
-    <section id="about">
-      <h2>About</h2>
-      <p>
+    <section id="about" class="section max-container">
+      <h2 class="title">About</h2>
+      <p class="description">
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi officiis consectetur dolorem numquam assumenda voluptatibus atque molestiae quis quae eius?
       </p>
-      <ul>
-        <li>
-          <i class="fa-brands fa-html5"></i>
-          <p>Front-end</p>
+      <ul class="majors">
+        <li class="major">
+          <i class="fa-brands fa-html5 major__icon"></i>
+          <p class="major__title">Front-end</p>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto, facere.</p>
         </li>
-        <li>
-          <i class="fa-solid fa-mobile"></i>
-          <p>Mobile</p>
+        <li class="major">
+          <i class="fa-solid fa-mobile major__icon"></i>
+          <p class="major__title">Mobile</p>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto, facere.</p>
         </li>
-        <li>
-          <i class="fa-solid fa-server"></i>
-          <p>Back-end</p>
+        <li class="major">
+          <i class="fa-solid fa-server major__icon"></i>
+          <p class="major__title">Back-end</p>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto, facere.</p>
         </li>
       </ul>
     </section>
     <!-- Skills -->
-    <section id="skills">
-      <h2>My Skills</h2>
-      <p>Skills & Attributes</p>
+    <section id="skills" class="section">
+      <h2 class="title">My Skills</h2>
+      <p class="description">Skills & Attributes</p>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam placeat in rem nulla, expedita fuga error facilis consequuntur soluta, voluptatibus numquam nostrum qui consectetur distinctio reprehenderit porro repudiandae maxime. Sequi officia doloremque dignissimos atque, fugit quos pariatur nisi expedita ut doloribus in. Id labore rem nesciunt consequuntur quasi. Deserunt, a!
       </p>
@@ -127,9 +127,9 @@
       </div>
     </section>
     <!-- Work -->
-    <section id="work">
-      <h2>My work</h2>
-      <p>Projects</p>
+    <section id="work" class="section">
+      <h2 class="title">My work</h2>
+      <p class="description">Projects</p>
       <ul>
         <li><button>All <span>8</span></button></li>
         <li><button>Front-end <span>3</span></button></li>
@@ -196,9 +196,9 @@
       </ul>
     </section>
     <!-- Testimonials -->
-    <section id="testimonial">
-      <h2>Testimonial</h2>
-      <p>See what they say about me</p>
+    <section id="testimonial" class="section">
+      <h2 class="title">Testimonial</h2>
+      <p class="description">See what they say about me</p>
       <ul>
         <li>
           <img src="images/testimonials/people1.webp" alt="people1">
@@ -237,9 +237,9 @@
      </aside>
   </main>
   <!-- Footer -->
-  <footer id="contact">
-    <h2>Let&#39;s talk</h2>
-    <p>yunso7201@naver.com</p>
+  <footer id="contact" class="section">
+    <h2 class="title">Let&#39;s talk</h2>
+    <p class="description">yunso7201@naver.com</p>
     <ul>
       <li>
         <a href="#" title="my github link" target="_blank"><i class="fa-brands fa-github"></i></a>
