--- a/index.html
+++ b/index.html
@@ -77,53 +77,55 @@
     </section>
     <!-- Skills -->
     <section id="skills" class="section">
-      <h2 class="title">My Skills</h2>
-      <p class="description">Skills & Attributes</p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam placeat in rem nulla, expedita fuga error facilis consequuntur soluta, voluptatibus numquam nostrum qui consectetur distinctio reprehenderit porro repudiandae maxime. Sequi officia doloremque dignissimos atque, fugit quos pariatur nisi expedita ut doloribus in. Id labore rem nesciunt consequuntur quasi. Deserunt, a!
-      </p>
-      <div>
-        <section>
-          <h3>Coding Skills</h3>
-          <ul>
-            <li>
-              <div><span>HTML</span><span>98%</span></div>
-              <div><div style="width: 98%"></div></div>
-            </li>
-            <li>
-              <div><span>CSS</span><span>90%</span></div>
-              <div><div style="width: 90%"></div></div>
-            </li>
-            <li>
-              <div><span>JavaScript</span><span>90%</span></div>
-              <div><div style="width: 90%"></div></div>
-            </li>
-            <li>
-              <div><span>TypeScript</span><span>80%</span></div>
-              <div><div style="width: 80%"></div></div>
-            </li>
-            <li>
-              <div><span>React</span><span>79%</span></div>
-              <div><div style="width: 79%"></div></div>
-            </li>
-            <li>
-              <div><span>NodeJS</span><span>68%</span></div>
-              <div><div style="width: 68%"></div></div>
-            </li>
-          </ul>
-        </section>
-        <section>
-          <h3>Tools</h3>
-          <ul>
-            <li>Visual Studio Code</li>
-          </ul>
-        </section>
-        <section>
-          <h3>Etc</h3>
-          <ul>
-            <li>Git</li>
-          </ul>
-        </section>
+      <div class="max-container">
+        <h2 class="title">My Skills</h2>
+        <p class="description">Skills & Attributes</p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam placeat in rem nulla, expedita fuga error facilis consequuntur soluta, voluptatibus numquam nostrum qui consectetur distinctio reprehenderit porro repudiandae maxime. Sequi officia doloremque dignissimos atque, fugit quos pariatur nisi expedita ut doloribus in. Id labore rem nesciunt consequuntur quasi. Deserunt, a!
+        </p>
+        <div class="skills">
+          <section class="skills__coding">
+            <h3 class="skills__title">Coding Skills</h3>
+            <ul>
+              <li>
+                <div><span>HTML</span><span>98%</span></div>
+                <div><div style="width: 98%"></div></div>
+              </li>
+              <li>
+                <div><span>CSS</span><span>90%</span></div>
+                <div><div style="width: 90%"></div></div>
+              </li>
+              <li>
+                <div><span>JavaScript</span><span>90%</span></div>
+                <div><div style="width: 90%"></div></div>
+              </li>
+              <li>
+                <div><span>TypeScript</span><span>80%</span></div>
+                <div><div style="width: 80%"></div></div>
+              </li>
+              <li>
+                <div><span>React</span><span>79%</span></div>
+                <div><div style="width: 79%"></div></div>
+              </li>
+              <li>
+                <div><span>NodeJS</span><span>68%</span></div>
+                <div><div style="width: 68%"></div></div>
+              </li>
+            </ul>
+          </section>
+          <section class="skills__tools">
+            <h3 class="skills__title">Tools</h3>
+            <ul>
+              <li>Visual Studio Code</li>
+            </ul>
+          </section>
+          <section class="skills__etc">
+            <h3 class="skills__title">Etc</h3>
+            <ul>
+              <li>Git</li>
+            </ul>
+          </section>
+        </div>
       </div>
     </section>
     <!-- Work -->
