--- a/index.html
+++ b/index.html
@@ -200,35 +200,35 @@
       </div>
     </section>
     <!-- Testimonials -->
-    <section id="testimonial" class="section">
+    <section id="testimonial" class="section max-container">
       <h2 class="title">Testimonial</h2>
       <p class="description">See what they say about me</p>
-      <ul>
-        <li>
-          <img src="images/testimonials/people1.webp" alt="people1">
-          <div>
+      <ul class="testimonials">
+        <li class="testimonial">
+          <img src="images/testimonials/people1.webp" alt="people1" class="testimonial__img">
+          <div class="testimonial__bubble">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium minima possimus pariatur deserunt magni culpa excepturi at vel cumque similique!
             </p>
-            <p><a href="#">James Kim</a> /Google</p>
+            <p><a href="#" class="testimonial__bubble__name">James Kim</a> /Google</p>
           </div>
         </li>
-        <li>
-          <img src="images/testimonials/people2.webp" alt="people2">
-          <div>
+        <li class="testimonial">
+          <img src="images/testimonials/people2.webp" alt="people2" class="testimonial__img">
+          <div class="testimonial__bubble">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium minima possimus pariatur deserunt magni culpa excepturi at vel cumque similique!
             </p>
-            <p><a href="#">Anna Jin</a> /Samsung</p>
+            <p><a href="#" class="testimonial__bubble__name">Anna Jin</a> /Samsung</p>
           </div>
         </li>
-        <li>
-          <img src="images/testimonials/people3.webp" alt="people3">
-          <div>
+        <li class="testimonial">
+          <img src="images/testimonials/people3.webp" alt="people3" class="testimonial__img">
+          <div class="testimonial__bubble">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium minima possimus pariatur deserunt magni culpa excepturi at vel cumque similique!
             </p>
-            <p><a href="#">Anna Jin</a> /Samsung</p>
+            <p><a href="#" class="testimonial__bubble__name">Anna Jin</a> /Samsung</p>
           </div>
         </li>
       </ul>
