--- a/index.html
+++ b/index.html
@@ -235,24 +235,26 @@
     </section>
     <!-- Arrow up -->
      <aside>
-      <a href="#home" title="back to top">
+      <a class="arrow-up" href="#home" title="back to top">
         <i class="fa-solid fa-arrow-up"></i>
       </a>
      </aside>
   </main>
   <!-- Footer -->
   <footer id="contact" class="section">
-    <h2 class="title">Let&#39;s talk</h2>
-    <p class="description">yunso7201@naver.com</p>
-    <ul>
-      <li>
-        <a href="#" title="my github link" target="_blank"><i class="fa-brands fa-github"></i></a>
-      </li>
-      <li>
-        <a href="#" title="my linkedin link" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-      </li>
-    </ul>
-    <p>©Publisher Yoon - All rights reserved</p>
+    <div class="max-container">
+      <h2 class="title">Let&#39;s talk</h2>
+      <p class="description">yunso7201@naver.com</p>
+      <ul class="contact__links">
+        <li>
+          <a class="contact__link" href="#" title="my github link" target="_blank"><i class="fa-brands fa-github"></i></a>
+        </li>
+        <li>
+          <a class="contact__link" href="#" title="my linkedin link" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+        </li>
+      </ul>
+      <p>©Publisher Yoon - All rights reserved</p>
+    </div>
   </footer>
 </body>
 </html>
