--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@
   <main>
     <!-- Home -->
     <section id="home">
-      <img class="home__avatar" src="images/profile.png" alt="YOON's portfolio">
-      <h2 class="home__title">hello <br /> I&#39;m <strong class="home__title--strong">Dream Coder</strong>, Yoon</h2>
-      <p class="home__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem, laboriosam!</p>
-      <a class="home__contact" href="#contact">Contact Me</a>
+      <div class="home__container">
+        <img class="home__avatar" src="images/profile.png" alt="YOON's portfolio">
+        <h2 class="home__title">hello <br /> I&#39;m <strong class="home__title--strong">Dream Coder</strong>, Yoon</h2>
+        <p class="home__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem, laboriosam!</p>
+        <a class="home__contact" href="#contact">Contact Me</a>
+      </div>
     </section>
     <!-- About -->
     <section id="about" class="section max-container">
