--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
   </footer>
 
   <!-- Javascript -->
-  <script src="src/main.js"></script>
+  <script type="module" src="src/main.js"></script>
+  <script type="module" src="src/projects.js"></script>
 </body>
 </html>
