--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <!-- OG(Open Graph Data) -->
   <meta property="og:title" content="윤의 포트폴리오" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="배포후 생성된 URL" />
-  <meta property="og:image" content="배포후에 생성된 이미지 URL" />
+  <meta property="og:url" content="https://yunso7201.github.io/portfolio_sy/" />
+  <meta property="og:image" content="https://yunso7201.github.io/portfolio_sy/images/og.webp" />
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
